Add CompositionDto endpoint in ACM-r
Issue-ID: POLICY-5629
Change-Id: I1edf87931de2f29054898e19cfe1750e5fb632bf
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>